--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p1>I'm hosted with GitHub Pages.</p1>
-<p2>Rv 22.21</p2>
+<p>I'm hosted with GitHub Pages.\n
+Rv 22.21</p>
 </body>
 </html>
